fix: added more width and aligned it to center

--- a/src/index.css
+++ b/src/index.css
@@ -77,34 +77,34 @@ button:focus-visible {
 
 .it-is-today {
   background-color: rgba(15, 116, 111, 0.932) !important;
-  color: rgb(21, 224, 214) !important; 
+  color: rgb(21, 224, 214) !important;
 }
 
 /* Task Priority */
 
 .less-qty-tasks {
-  background-color: rgba(133, 255, 245, 0.2); 
-  border-radius: 5px; 
-  padding: 3px 36px; 
+  background-color: rgba(133, 255, 245, 0.2);
+  border-radius: 5px;
+  padding: 3px 36px;
 }
 
 .medium-qty-tasks {
-  background-color: rgba(240, 255, 146, 0.2); 
-  border-radius: 5px; 
-  padding: 3px 36px; 
+  background-color: rgba(240, 255, 146, 0.2);
+  border-radius: 5px;
+  padding: 3px 36px;
 }
 
 .high-qty-tasks {
-  background-color: rgba(255, 0, 0, 0.2); 
-  border-radius: 5px; 
-  padding: 3px 36px; 
+  background-color: rgba(255, 0, 0, 0.2);
+  border-radius: 5px;
+  padding: 3px 36px;
 }
 
 .tabs-container {
   margin-bottom: 20px;
   width: 40%;
-  margin-left:auto;
-  margin-right:auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 @media only screen and (max-width: 768px) {
   .tabs-container {
@@ -112,8 +112,8 @@ button:focus-visible {
   }
 }
 .active {
-  color:var(--bulma-primary) !important;
-  border-bottom-color:var(--bulma-primary) !important;
+  color: var(--bulma-primary) !important;
+  border-bottom-color: var(--bulma-primary) !important;
 }
 
 .about-section-container > div > p {
@@ -144,7 +144,7 @@ button:focus-visible {
   background-color: rgb(0, 172, 146);
 }
 .custom-task-checkbox {
-  width: 30px;
+  width: 80%;
   height: 20px;
   appearance: none;
   background-color: #f0f0f0;
@@ -165,7 +165,7 @@ button:focus-visible {
   content: "";
   position: absolute;
   top: 3px;
-  left: 12px;
+  left: 45%;
   width: 4px;
   height: 9px;
   border: solid white;
@@ -177,4 +177,10 @@ button:focus-visible {
 
 .custom-task-checkbox:checked::after {
   opacity: 1;
+}
+
+.allotted-time-cell {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
